# RobotVisionKU

./: CMakeLists.txt  README.md  gmstereo_demo.sh
A1/: gmstereo_demo.sh
A1/code/: assign1_task1.cpp  assign1_task2.cpp  assign1_task3.cpp
A1/fileoutput/: extrinsic.yaml  left_calib.yaml
A2/code/: assign2_task1.cpp
A2/fileoutput/LL/: matches_SURF.yaml
A2/fileoutput/LR/: matches_FastFeatureDetector.yaml  matches_ORB.yaml  matches_SIFT.yaml  matches_SURF.yaml
A3/code/: assign3_task1.py  assign3_task2.py  assign3_task3.py  assign3_task4.py
A3/fileoutput/NPY_Depth/: 2011_10_03_drive_0047_sync_image_0000000005_image_03_depth.npy  2011_10_03_drive_0047_sync_image_0000000086_image_03_depth.npy  2011_10_03_drive_0047_sync_image_0000000131_image_02_depth.npy  2011_10_03_drive_0047_sync_image_0000000209_image_02_depth.npy  2011_10_03_drive_0047_sync_image_0000000245_image_02_depth.npy  2011_10_03_drive_0047_sync_image_0000000296_image_03_depth.npy  2011_10_03_drive_0047_sync_image_0000000326_image_03_depth.npy  2011_10_03_drive_0047_sync_image_0000000395_image_02_depth.npy  2011_10_03_drive_0047_sync_image_0000000521_image_02_depth.npy  (+1 more)
code/: assign1_task1.cpp  assign1_task2.cpp  assign1_task3.cpp  assign2_task1.cpp  assign2_task2.cpp
fileoutput/: extrinsic.yaml  intrinsics.yaml  right_calib
fileoutput/LL/: matches.yaml  matches_FastFeatureDetector.yaml  matches_ORB.yaml  matches_SIFT.yaml  matches_SURF.yaml
fileoutput/LR/: matches_FastFeatureDetector.yaml  matches_SIFT.yaml  matches_SURF.yaml
include/: assign1_task2.hpp
(+60 files in other folders)
